# oztone

./: .gitignore  CMakeLists.txt  PROJECT_ARCHITECTURE.md  PROJECT_CONSTITUTION.md  README.md  build.bat  build_release.bat  fix.ps1  fix2.ps1  fix_renderer.py  fix_renderer2.py  integrate_widgets.py  patch.py  replacements.json  safe_fix.py  update_task4.ps1
_docs/: 20260704_1555_log_widget_refactoring.md  OZtone_UI_DESIGN.md  OzPlayer_Plan.txt  OzPlayer_Plan_1st.txt  Phase21.md  REQ(Hotfix)_template.md  REQ(Hotfix)_template2.md  REQ(Hotfix_Immediately)_template.md  REQ(Hotfix_unImmediately)_template.md  REQ(ImpretonPlanMake)_template.md  REQ(TaskExecution)_template.md  REQ(TaskExecution_Additional)_template.md  REQ(TaskExecution_Lite)_template.md  REQ(WorkInstructions)_template.md  REQ_EXCUTION.md  REQ_TASK_EXCUTION.md  RES(AddHotfix)_template.md  RES(Hotfix)_template.md  RES(ImpretonPlan)_template.md  prompt_template.txt  task.md  task.txt
_docs/chatlog/: 20260704_1712_log_widget_refactoring.md  20260711_1711_log_Application_refactoring.md  20260712_0947_log_Application_refactoring.md  20260712_1852_log_Window_refactoring.md  20260712_2059_log_Widget_refactoring.md  20260713_2254_log_Renderer_refactoring.md  20260713_2258_log_Renderer_refactoring.md  20260713_2335_log_WidgetPlaylist_refactoring.md  20260713_2339_log_WidgetPlaylist_refactoring.md  20260720_1302_log_FileManager_refactoring.md  20260720_1537_log_FileManager_refactoring_filereadsize.md
_docs/logs/: 20260629_2115_Phase1_Step2.md  20260629_2255_Phase2_Step1.md  20260629_2340_Phase2_Step2.md  20260630_0016_Phase2_Step3.md  20260630_0047_Phase3_Step1.md  20260630_1051_Phase4_Step4_Additional.md  20260630_1059_Phase4_Step4_Hotfix.md  20260630_1114_Phase5_Step1.md  20260630_1132_Phase5_Step2.md  20260630_1155_Phase5_Step3.md  20260630_1229_Phase5_Step4.md  20260630_1255_Phase5_Step6.md  20260630_1313_Phase5_Step7.md  20260630_2100_Phase6-Step3.md  20260630_2230_Phase6-Step7.md  20260630_2258_Phase6-Step7-Part3.md  20260630_2331_Phase6-Step7-Part4.md  20260630_2358_Phase7_Step1_Part1.md  20260701_0008_Phase7_Step1_Part2and3.md  20260701_0024_Phase7-2_SpectralAnalyzer.md  20260701_0024_Phase7-Step2.md  20260701_0205_Phase7-Step3.md  20260701_1408_hotfix_CrashDebug.md  20260701_1955_Phase8-5_WindowResize.md  20260701_2015_Phase8-5_Hotfix_ForceRender.md  20260701_2108_Hotfix_WindowResize_debug.md  20260701_2222_Hotfix_Text_Unicode.md  20260701_2337_Phase8-8_Playlist.md  20260702_0111_Phase8-8_Playlist_Interaction.md  20260702_0144_Phase8-8_Playlist_affordance.md  20260702_0215_Phase8-8_SeekBarMargin.md  20260704_1046_Phase9-3_UpdateAnimation.md  20260704_1755_RES_Phase10-4_PlaylistBackload.md  20260704_1854_RES_Phase11-1_NewPlaylist.md  20260704_2003_RES_Phase12-1_LogoMenu.md  20260704_2114_RES_Phase12-2_LogoMenuUX.md  20260704_2314_RES_Phase13_PlaylistHierarchy.md  20260705_0044_RES_Phase14_IniHotReload.md  20260705_0112_RES_Phase10-1_hotfix_TrackNoMove.md  20260705_0126_RES_Phase10-1_hotfix2_TrackNoMove.md  (+102 more)
_docs/order/: 20260629_1925_Phase1-1_firstwindow_implementation_plan.md  20260629_2115_Phase1-2_ConfigManager_implementation_plan.md  20260629_2132_Phase2-1_Renderer.md  20260629_2132_Phase2-1_Renderer_implementation_plan.md  20260629_2333_Phase2-2_AnkerIconDrow.md  20260629_2333_Phase2-2_AnkerIconDrow_implementation_plan.md  20260630_0029_Phase2-4_AlbumTextDisp.md  20260630_0044_Phase3-1_DragMove.md  20260630_0147_Phase4-1_miniaudio.md  20260630_0208_Phase4-2_AudioPlayer_Update.md  20260630_0208_Phase4-3_SeekBar.md  20260630_1012_Phase5-1_PlayList.md  20260630_1126_Phase5-2_PlayList_SupportsMultipleFiles.md  20260630_1243_Phase5-5_PlayList_failsafe.md  20260630_1255_Phase5-6_PlayList_suffle.md  20260630_1327_Phase6-1_DefaultIni.md  20260630_2032_Phase6-2_SystemTray.md  20260630_2052_Phase6-3_DropShadow.md  20260630_2137_Phase6-5_Command_line_arguments.md  20260630_2200_Phase6-6_LowLevelKeyboardHook.md  20260630_2343_Phase7-1_Acquisition_spectral_data.md  20260701_0013_Phase7-2_SpectralAnalyzer.md  20260701_0156_Phase7-3_CircleSpectralAnalyzer.md  20260701_0156_Phase7-3_CircleSpectralAnalyzer_implementation_plan.md  20260701_0918_Phase8-2_VolumeControl.md  20260701_1408_hotfix_CrashDebug.md  20260701_1917_Phase8-5_WindowResize.md  20260701_2222_Hotfix_Text_Unicode.md  20260701_2222_Hotfix_Text_Unicode_implementation_plan.md  20260701_2259_Phase8-8_PlayList_Step1_implementation_plan.md  20260702_0144_Phase8-9_Seekbar_layout_refactoring.md  20260704_0936_Phase9-1_Render_ExtractMethods.md  20260704_1006_Phase9-2_LayoutCalculator.md  20260704_1039_Phase9-3_UpdateAnimation.md  20260704_1315_Phase9-5_Widgetization_Task5_ImplementPlan.md  20260704_1528_REQ_Phase9-5_Widgetization_HotFix.md  20260704_1853_REQ_Phase11-1_NewPlaylist.md  20260704_1909_REQ_Phase11-2_PlaylistSubMenu.md  20260704_2001_REQ_Phase12-1_LogoMenu.md  20260704_2113_REQ_Phase12-2_LogoMenuUX.md  (+128 more)
scratch/: del_lines.py  old_ConfigManager.h  old_ConfigManager_Playback.cpp  old_ConfigManager_Playback_utf8.cpp  old_ConfigManager_Playlist.cpp  old_ConfigManager_Playlist_utf8.cpp  old_ConfigManager_utf8.h  purge.py  update_includes.py
src/: Application.cpp  Application.h  Application_FileDrop.cpp  Application_Initialize.cpp  Application_Playback.cpp  Application_Playlist.cpp  Application_Render.cpp  ArtFramingDatabase.cpp  ArtFramingDatabase.h  AudioAnalyzer.cpp  AudioAnalyzer.h  AudioManager.cpp  AudioManager.h  AudioPlaybackEngine.cpp  AudioPlayer.cpp  AudioPlayer.h  BackgroundManager.cpp  BackgroundManager.h  ConfigManager.cpp  ConfigManager.h  ConfigManager_Background.cpp  ConfigManager_DefaultIni.h  ConfigManager_LogoMenu.cpp  ConfigManager_Playback.cpp  ConfigManager_Playlist.cpp  ConfigManager_System.cpp  ConfigManager_Visualizer.cpp  ConfigManager_Window.cpp  FileManager.cpp  FileManager.h  IVisualizerStyle.h  LayoutCalculator.cpp  LayoutCalculator.h  LogoMenuWidget.cpp  LogoMenuWidget.h  OZtone.rc  OsdWidget.cpp  OsdWidget.h  PlaybackControlsWidget.cpp  PlaybackControlsWidget.h  (+77 more)
src/Config/: ConfigManager.cpp  ConfigManager.h  ConfigManager_DefaultIni.h  (+46 more)
(+258 files in other folders)
